log
ju., 15 de may. de 2025 18:36:18: 
 sudoku.c | 49 +++++++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 49 insertions(+)
 tests:  6|2
total_score: 45/70
3f0e54c
ju., 15 de may. de 2025 18:50:02: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|2
total_score: 45/70
97195f4
ju., 15 de may. de 2025 18:50:30: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 55/70
7268fc9
ju., 15 de may. de 2025 18:52:13: 
 sudoku.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
eb1f23a
ju., 15 de may. de 2025 19:04:47: 
 sudoku.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
 tests:  7|1
total_score: 55/70
89e4c7f
ju., 15 de may. de 2025 19:12:03: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  6|2
total_score: 45/70
fc8b328
ju., 15 de may. de 2025 19:13:00: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
Compilation failed
test.c: In function 'is_final':
test.c:245:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
 }
 ^
test.c:262:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
At top level:
test.c:245:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:7:8: error: '_strdup' defined but not used [-Werror=unused-function]
 char * _strdup(const char * str) {
        ^~~~~~~
cc1.exe: all warnings being treated as errors
789acfc
ju., 15 de may. de 2025 19:13:31: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|2
total_score: 45/70
1ba9c5d
ju., 15 de may. de 2025 19:14:34: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
e8355e3
ju., 15 de may. de 2025 19:16:10: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  6|2
total_score: 45/70
0e54db8
ju., 15 de may. de 2025 19:16:42: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  7|1
total_score: 55/70
4be1e44
ju., 15 de may. de 2025 19:17:52: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|2
total_score: 45/70
66ef526
ju., 15 de may. de 2025 19:19:57: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  7|1
total_score: 55/70
e4a1c27
ju., 15 de may. de 2025 19:21:33: 
 sudoku.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  7|1
total_score: 55/70
0973812
ju., 15 de may. de 2025 19:24:18: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
55689a3
